# nemos_glm_tutorials

./: .gitignore  .mlc.external.json  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  conf.py  index.md
docs/tutorials/Sfn-2016-tutorial-GLMs/: 01_poisson_glm.md  index.md
scripts/: check_markdown_links.sh
src/nemos_tutorials/: __init__.py  fetch.py
